[package]
name = "solxplain"
version = "0.1.0"
edition = "2024"
authors = ["John Amos idoroyen33@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A cli tool to view solana accounts and tx logs like the explorer"
readme = "README.md"
homepage = "https://github.com/idorocodes/solxplain"
repository = "https://github.com/idorocodes/solxplain"
keywords = ["cli", "solana", "accounts", "transaction"]
categories = ["command-line-utilities"]



[dependencies]
anyhow = "1.0.100"
borsh = "1.6.0"
clap = { version = "4.5.53", features = ["derive"] }
hex = "0.4.3"
serde = "1.0.228"
solana-client = "3.1.5"
solana-sdk = "3.0.0"
solana-transaction-status = "3.1.5"
tokio = { version = "1.48.0", features = ["full"] }
